--- a/main_net_config.conf
+++ b/main_net_config.conf
@@ -436,7 +436,7 @@ block = {
 # trx.expiration.timeInMilliseconds = 60000
 
 vm = {
-  supportConstant = false
+  supportConstant = true
   minTimeRatio = 0.0
   maxTimeRatio = 5.0
   saveInternalTx = false
