--- a/main_net_config.conf
+++ b/main_net_config.conf
@@ -46,6 +46,195 @@ storage {
     //      cacheSize = 10485760,       // 10 MB = 10 * 1024 * 1024 B
     //      maxOpenFiles = 100
     //    },
+    {
+      name = "DelegatedResource",
+      maxOpenFiles = 100
+    },
+    {
+      name = "DelegatedResourceAccountIndex",
+      maxOpenFiles = 100
+    },
+    {
+      name = "IncrementalMerkleTree",
+      maxOpenFiles = 100
+    },
+    {
+      name = "IncrementalMerkleVoucher",
+      maxOpenFiles = 100
+    },
+    {
+      name = "abi",
+      maxOpenFiles = 100
+    },
+    {
+      name = "account",
+      maxOpenFiles = 100
+    },
+    {
+      name = "account-asset-issue",
+      maxOpenFiles = 100
+    },
+    {
+      name = "account-index",
+      maxOpenFiles = 100
+    },
+    {
+      name = "account-trace",
+      maxOpenFiles = 100
+    },
+    {
+      name = "accountTrie",
+      maxOpenFiles = 100
+    },
+    {
+      name = "accountid-index",
+      maxOpenFiles = 100
+    },
+    {
+      name = "asset-issue",
+      maxOpenFiles = 100
+    },
+    {
+      name = "asset-issue-v2",
+      maxOpenFiles = 100
+    },
+    {
+      name = "balance-trace",
+      maxOpenFiles = 100
+    },
+    {
+      name = "block",
+      maxOpenFiles = 100
+    },
+    {
+      name = "block-index",
+      maxOpenFiles = 100
+    },
+    {
+      name = "block_KDB",
+      maxOpenFiles = 100
+    },
+    {
+      name = "code",
+      maxOpenFiles = 100
+    },
+    {
+      name = "common",
+      maxOpenFiles = 100
+    },
+    {
+      name = "common-database",
+      maxOpenFiles = 100
+    },
+    {
+      name = "contract",
+      maxOpenFiles = 100
+    },
+    {
+      name = "delegation",
+      maxOpenFiles = 100
+    },
+    {
+      name = "exchange",
+      maxOpenFiles = 100
+    },
+    {
+      name = "exchange-v2",
+      maxOpenFiles = 100
+    },
+    {
+      name = "info",
+      maxOpenFiles = 100
+    },
+    {
+      name = "market_account",
+      maxOpenFiles = 100
+    },
+    {
+      name = "market_order",
+      maxOpenFiles = 100
+    },
+    {
+      name = "market_pair_price_to_order",
+      maxOpenFiles = 100
+    },
+    {
+      name = "market_pair_to_price",
+      maxOpenFiles = 100
+    },
+    {
+      name = "nullifier",
+      maxOpenFiles = 100
+    },
+    {
+      name = "pbft-sign-data",
+      maxOpenFiles = 100
+    },
+    {
+      name = "peers",
+      maxOpenFiles = 100
+    },
+    {
+      name = "properties",
+      maxOpenFiles = 100
+    },
+    {
+      name = "proposal",
+      maxOpenFiles = 100
+    },
+    {
+      name = "recent-block",
+      maxOpenFiles = 100
+    },
+    {
+      name = "storage-row",
+      maxOpenFiles = 100
+    },
+    {
+      name = "tmp",
+      maxOpenFiles = 100
+    },
+    {
+      name = "trans",
+      maxOpenFiles = 100
+    },
+    {
+      name = "trans-cache",
+      maxOpenFiles = 100
+    },
+    {
+      name = "transactionHistoryStore",
+      maxOpenFiles = 100
+    },
+    {
+      name = "transactionRetStore",
+      maxOpenFiles = 100
+    },
+    {
+      name = "tree-block-index",
+      maxOpenFiles = 100
+    },
+    {
+      name = "utxo",
+      maxOpenFiles = 100
+    },
+    {
+      name = "votes",
+      maxOpenFiles = 100
+    },
+    {
+      name = "witness",
+      maxOpenFiles = 100
+    },
+    {
+      name = "witness_schedule",
+      maxOpenFiles = 100
+    },
+    {
+      name = "zkProof",
+      maxOpenFiles = 100
+    }
+
   ]
 
   needToUpdateAsset = true
@@ -120,7 +309,7 @@ node {
 
   maxActiveNodesWithSameIp = 2
 
-  maxHttpConnectNumber = 50
+  maxHttpConnectNumber = 500
 
   minParticipationRate = 15
 
@@ -189,7 +378,7 @@ node {
   # number of solidity thread in the FullNode.
   # If accessing solidity rpc and http interface timeout, could increase the number of threads,
   # The default value is the number of cpu cores of the machine.
-  #solidity.threads = 8
+  solidity.threads = 32
 
   # Limits the maximum percentage (default 75%) of producing block interval
   # to provide sufficient time to perform other operations e.g. broadcast block
@@ -217,7 +406,7 @@ seed.node = {
     "18.133.82.227:18888",
     "35.180.51.163:18888",
     "54.252.224.209:18888",
-    "18.228.15.36:18888",
+    "18.231.27.82:18888",
     "52.15.93.92:18888",
     "34.220.77.106:18888",
     "13.127.47.162:18888",
@@ -438,7 +627,7 @@ block = {
 vm = {
   supportConstant = true
   minTimeRatio = 0.0
-  maxTimeRatio = 5.0
+  maxTimeRatio = 50.0
   saveInternalTx = false
 
   # In rare cases, transactions that will be within the specified maximum execution time (default 10(ms)) are re-executed and packaged
@@ -511,3 +700,4 @@ event.subscribe = {
        ]
     }
 }
+
