--- a/main_net_config.conf
+++ b/main_net_config.conf
@@ -289,7 +289,7 @@ node {
   trustNode = "127.0.0.1:50051"
 
   # expose extension api to public or not
-  walletExtensionApi = true
+  walletExtensionApi = false
 
   listen.port = 18888
 
@@ -300,12 +300,12 @@ node {
   udpNettyWorkThreadNum = 1
 
   # Number of validate sign thread, default availableProcessors / 2
-  # validateSignThreadNum = 16
+  validateSignThreadNum = 16
 
   connectFactor = 0.3
   activeConnectFactor = 0.1
 
-  maxActiveNodes = 30
+  maxActiveNodes = 100
 
   maxActiveNodesWithSameIp = 2
 
@@ -372,7 +372,7 @@ node {
     # maxHeaderListSize =
 
     # Transactions can only be broadcast if the number of effective connections is reached.
-    minEffectiveConnection = 1
+    minEffectiveConnection = 5
   }
 
   # number of solidity thread in the FullNode.
